fixing git errors for the frontend

--- a/booking.html
+++ b/booking.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Cart</title>
+    <title>Booking</title>
 </head>
 <body>
     <header>   
@@ -19,11 +19,11 @@
         </nav>
     </header>
 
-    <div class="background-cart">
-            <div class="Not-found">
-                <p>No tickets in your cart.</p>
-                <p>Why not plan a trip ?</p>
-            </div>
-    </div>
+    <div class="background-booking">
+        <div class="Not-found-booking">
+            <p>No booking yet ?</p>
+            <p>Why not plan a trip ?</p>
+        </div>
+</div>
 </body>
 </html>
