--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header>
     <div class="logo">
-      <h1>Tickethack</h1>
+      <h1><a href="index.html">Tickethack</a></h1>
     </div>
     <nav>
       <ul>
@@ -42,10 +42,9 @@
         <img src="./images/train.png" alt="Train icon">
         <div id="results" class="results"></div>
         <p>Time to book your future Trip ! </p>
+        <div id="trainList" class="train-list"></div>
       </div>
-    
     </div>
-
 
     <script src='script.js'></script>
 
