fixing frontend susccessful

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     </div>
     <nav>
       <ul>
-        <li><a href="#">Cart</a></li>
-        <li><a href="#">Bookings</a></li>
+        <li><a href="cart.html">Cart</a></li>
+        <li><a href="booking.html">Bookings</a></li>
       </ul>
     </nav>
   </header>
