--- a/booking.html
+++ b/booking.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Booking</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Bookings - Tickethack</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>   
-        <div class="logo">
-            <h1><a href="index.html">Tickethack</a></h1>
-        </div>
-        <nav>
-            <ul>
-                <li><a href="cart.html">Cart</a></li>
-                <li><a href="booking.html">Bookings</a></li>
-            </ul>
-        </nav>
-    </header>
+  <header>
+    <div class="logo">
+      <h1><a href="index.html">Tickethack</a></h1>
+    </div>
+    <nav>
+      <ul>
+        <li><a href="cart.html">Cart</a></li>
+        <li><a href="booking.html">Bookings</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <div class="background-booking">
-        <div class="Not-found-booking">
-            <p>No booking yet ?</p>
-            <p>Why not plan a trip ?</p>
-        </div>
-</div>
+  <div class="container">
+    <h1>My Bookings</h1>
+    <div id="bookingsList" class="bookings-list">
+      <!-- Les trajets payés seront affichés ici -->
+    </div>
+  </div>
+
+  <script src="bookings.js"></script>
 </body>
 </html>
