--- a/cart.html
+++ b/cart.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Cart</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cart - Tickethack</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>   
-        <div class="logo">
-            <h1><a href="index.html">Tickethack</a></h1>
-        </div>
-        <nav>
-            <ul>
-                <li><a href="cart.html">Cart</a></li>
-                <li><a href="booking.html">Bookings</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <div class="background-cart">
-            <div class="Not-found">
-                <p>No tickets in your cart.</p>
-                <p>Why not plan a trip ?</p>
-            </div>
+  <header>
+    <div class="logo">
+      <h1><a href="index.html">Tickethack</a></h1>
     </div>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="booking.html">Bookings</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <div class="container">
+    <h1>Your Cart</h1>
+    <div id="cartList" class="cart-list">
+      <!-- The list of reserved trips will appear here -->
+    </div>
+
+    <p id="emptyMessage" style="display: none;">Your cart is empty.</p>
+  </div>
+
+  <script src="cart.js"></script>
 </body>
 </html>
