--- a/cart.html
+++ b/cart.html
@@ -20,10 +20,20 @@
     </header>
 
     <div class="background-cart">
-            <div class="Not-found">
-                <p>No tickets in your cart.</p>
-                <p>Why not plan a trip ?</p>
+        <div id="emptyCartMessage" class="empty-cart-message">
+            <p>No tickets in your cart.</p>
+            <p>Why not plan a trip ?</p>
+        </div>
+        <div id="cartContent" class="cart-content" style="display: none;">
+            <div id="cartItems" class="cart-items">
+                <!--Ici les trajets réservés sont censés s'afficher-->
             </div>
+            <div id="cartTotal" class="cart-total">
+                <h2>Total: <span id="totalPrice">0</span> €</h2>
+                <button id="ClearCart">Clear Cart</button>
+            </div>
+        </div>
     </div>
+    <script src="cart.js"></script>
 </body>
 </html>
